cmake_minimum_required(VERSION 3.0)
#project(adler32)
#set(SOURCE adler32.cpp md5.cpp HttpUtility.cpp)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(${PROJECT_NAME} ${SOURCE})

aux_source_directory(type TYPE_LIST)
project(TestContain)
set(SOURCE TestContain.cpp HttpUtility.cpp)
set(CMAKE_CXX_STANDARD 14)
add_executable(${PROJECT_NAME} ${SOURCE} ${TYPE_LIST})
set(THREAD pthread)
#target_link_libraries(TestContain ${THREAD})

project(sserver)
set(THREAD pthread)
set(SOURCE sserver.cpp HttpUtility.cpp)
set(CMAKE_CXX_STANDARD 17)
add_executable(${PROJECT_NAME} ${SOURCE})
target_link_libraries(sserver ${THREAD})

#project(opengl)
#set(OPENGL GL glut)
#set(SOURCE testopengl.cpp )
#set(CMAKE_CXX_STANDARD 14)
#add_executable(${PROJECT_NAME} ${SOURCE})
#target_link_libraries(opengl ${OPENGL})